--- a/404.njk
+++ b/404.njk
@@ -8,7 +8,7 @@ permalink: 404.html
 
     <h1>{{ title }}</h1>
 
-    <p>I'm the only one here! Maybe what you want is on the
+    <p>Sou o único porque aqui! Talvez o que estás a procura está na 
         <a href="{{ " /" | url }}">home page?</a>
         <br/>    
     </p>
