--- a/index.njk
+++ b/index.njk
@@ -1,8 +1,8 @@
 ---
 layout: layouts/base.njk
 permalink: /
-alt: Narciso Ornelas
-title: Narciso Ornelas
+alt: Clan Portugal
+title: Clan Portugal
 image: /images/uploads/facebook-default.jpg
 ---
 <!-- Index css ==================== -->
