--- a/youtube.njk
+++ b/youtube.njk
@@ -16,13 +16,13 @@ image: /images/uploads/apps-list.jpg
 
 <!-- CONTENT ==================== -->
 
-<h1>Choose the app you want to use</h1>
+<h1>Subscreve e segue os canais dos nossos Youtubers</h1>
 
 <main class="indexContainer">
 
     <section class="list-apps">
         <section class="youtubegrabber">            
-                <a href="https://ytg.ornelasnarciso.com/" target="_blank" rel="noreferrer noopener" aria-label="Youtube Thumbnail Grabber"><img src="/images/apps/youtube-grabber.jpg" alt="Youtube Thumbnail Grabber"/><span class="btnMore">Use APP ⇨</span></a>                        
+                <a href="https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ" target="_blank" rel="noreferrer noopener" aria-label="Youtube"><img src="/images/uploads/logo-white.png" alt="Youtube"/><span class="btnMore">Biclas Gaming ⇨</span></a>                        
         </section>
     </section>
 
