--- a/ptii.njk
+++ b/ptii.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Apps
-image: /images/uploads/apps-list.jpg
+title: PTII
+image: /images/uploads/facebook-default.jpg
 ---
 
 {% include "partials/ptii.njk" %} <!-- TEAM == -->  
