--- a/youtube.njk
+++ b/youtube.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Apps
-image: /images/uploads/apps-list.jpg
+title: Youtubers
+image: /images/uploads/facebook-default.jpg
 ---
 
 <!-- Index css ==================== -->
