--- a/academia.njk
+++ b/academia.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Apps
-image: /images/uploads/apps-list.jpg
+title: Academia
+image: /images/uploads/facebook-default.jpg
 ---
 
 {% include "partials/academia.njk" %} <!-- TEAM == -->  
