--- a/ptiii.njk
+++ b/ptiii.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
-title: Apps
-image: /images/uploads/apps-list.jpg
+title: PTIII
+image: /images/uploads/facebook-default.jpg
 ---
 
 {% include "partials/ptiii.njk" %} <!-- TEAM == -->  
