--- a/index.njk
+++ b/index.njk
@@ -1,8 +1,8 @@
 ---
 layout: layouts/base.njk
 permalink: /
-alt: Clan Portugal
-title: Clan Portugal
+alt: Clan Portugal HCR2
+title: Clan Portugal HCR2
 image: /images/uploads/facebook-default.jpg
 ---
 <!-- Index css ==================== -->
