--- a/404.njk
+++ b/404.njk
@@ -8,12 +8,12 @@ permalink: 404.html
 
     <h1>{{ title }}</h1>
 
-    <p>Sou o único porque aqui! Talvez o que estás a procura está na 
+    <p>Sou o único porque aqui! Talvez o que estás à procura está na 
         <a href="{{ " /" | url }}">home page?</a>
         <br/>    
     </p>
 
-    <img src="/images/potoo-small-.png" alt="Potoo Narciso Ornelas">
+    <img src="/images/potoo-small-.png" alt="Potoo Narciso Ornelas Avatar">
 
 </main>
 
