--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,6 +7,8 @@
 
     {% include "partials/navbar.njk" %}
 
+    {% include "partials/netlifycms.njk" %}
+
     <section class="global-content">
         {{ content | safe }}
     </section>
