--- a/styles/team.css
+++ b/styles/team.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-items: center;
   padding-bottom: 3rem;
-  background-color: var(--background);
+  background-color: var(--background-reading);
 }
 
 .team-1 img {
@@ -17,49 +17,55 @@
   max-height: 180px;
 }
 
-div:nth-child(2),
-div:nth-child(3) {
-  background-color: #254525;
-  color: #fafafa;
+.team-1:nth-child(2) {
+  border-radius: 70%;
+  background-color: red;
 }
 
-div:nth-child(n + 11) {
-  background-color: var(--background);
+/* This fixes the first and second child background color */
+
+div:nth-child(1) img,
+div:nth-child(2) img,
+div:nth-child(3) img {
+  background-color: #e8b03f;
+  padding: 5px;
+}
+
+div:nth-child(n + 11) img {
+  background-color: var(--background-reading);
   color: var(--text-color);
 }
 
-div:nth-child(4),
-div:nth-child(5),
-div:nth-child(6),
-div:nth-child(7),
-div:nth-child(8),
-div:nth-child(9),
-div:nth-child(10) {
+div:nth-child(4) img,
+div:nth-child(5) img,
+div:nth-child(6) img,
+div:nth-child(7) img,
+div:nth-child(8) img,
+div:nth-child(9) img,
+div:nth-child(10) img {
   background-color: #266e26;
   color: #fafafa;
+  padding: 5px;
 }
 
-div:nth-last-child(2),
-div:nth-last-child(3) {
+div:nth-last-child(2) img,
+div:nth-last-child(3) img {
   background-color: #b22222;
-  color: #fafafa;
-}
-
-/* This fixes the first child background color */
-
-div {
-  background-color: #254525;
-  color: #fafafa;
+  padding: 5px;
 }
 
 /* This fixes the last child background color */
 
-.team-1 div:last-child {
+.team-1 div:last-child img {
   background-color: #b22222;
-  color: #fafafa;
+  padding: 5px;
 }
 
 #mobileMenu {
+  background-color: var(--navbar-background);
+}
+
+#navbarLogo {
   background-color: var(--navbar-background);
 }
 
