--- a/partials/academia.njk
+++ b/partials/academia.njk
@@ -7,8 +7,9 @@
             {%- for item in academia.profileacademia -%}
 
                 <div class="grid-element-team module" >                
-                    <img src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
+                    <img class="featuredImage" src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
                     <h2>{{ item.title }}</h2>
+                    <img class="flag" src="{{ item.flag }}" alt="{{ flag }}"></img> 
                 </div>               
 
             {%- endfor -%}
