--- a/partials/ptiii.njk
+++ b/partials/ptiii.njk
@@ -7,7 +7,7 @@
             {%- for item in ptiii.profileptiii -%}
 
                 <div class="grid-element-team module" >                
-                    <img src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
+                    <img class="featuredImage" src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
                     <h2>{{ item.title }}</h2>
                 </div>               
 
