--- a/partials/ptii.njk
+++ b/partials/ptii.njk
@@ -9,6 +9,7 @@
                 <div class="grid-element-team module" >                
                     <img class="featuredImage" src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
                     <h2>{{ item.title }}</h2>
+                    <img class="flag" src="{{ item.flag }}" alt="{{ flag }}"></img> 
                 </div>               
 
             {%- endfor -%}
