--- a/robots.liquid
+++ b/robots.liquid
@@ -3,7 +3,7 @@ permalink: /robots.txt
 layout: null
 ---
 
-Sitemap: https://ornelasnarciso11ty.netlify.app/sitemap.xml
+Sitemap: https://clanportugal.tk/sitemap.xml
 
 User-agent: *
 Disallow:
