text fix index page

--- a/index.njk
+++ b/index.njk
@@ -45,7 +45,7 @@ image: /images/uploads/facebook-default.jpg
         <br/>
 
         <p>
-            Se já fazes parte do nosso grupo segue os resultados dos nossos jogos nos separadores do nosso site.       
+            Se já fazes parte do nosso grupo segue a tua posição nos separadores do nosso site.       
         </p>
     </section>
 
