--- a/youtube.njk
+++ b/youtube.njk
@@ -16,7 +16,7 @@ image: /images/uploads/facebook-default.jpg
 
 <!-- CONTENT ==================== -->
 
-<h1>Subscreve e segue os canais dos nossos Youtubers</h1>
+<span class="title"><h1>Subscreve e segue os canais dos nossos Youtubers</h1></span>
 
 <main class="team">  
 
