--- a/styles/team.css
+++ b/styles/team.css
@@ -9,7 +9,7 @@
   justify-items: center;
   padding-bottom: 7rem;
   padding-top: 1rem;
-  background-color: var(--background-reading);
+  background-color: var(--background);
 }
 
 .flag {
@@ -40,7 +40,7 @@ div:nth-child(3) .featuredImage {
 }
 
 div:nth-child(n + 11) .featuredImage {
-  background-color: var(--background-reading);
+  background-color: var(--background);
   color: var(--text-color);
 }
 
