--- a/partials/team.njk
+++ b/partials/team.njk
@@ -4,12 +4,16 @@
 
         {%- if team.profile -%}
 
-            {%- for item in team.profile -%}
+            {%- for item in team.profile -%} 
 
-                <div class="grid-element-team module" >                
+                <div class="grid-element-team module" >  
+
                     <img class="featuredImage" src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
                     <h2>{{ item.title }}</h2>
-                    <img class="flag" src="{{ item.flag }}" alt="{{ flag }}"></img> 
+                    <img class="flag" src="{{ item.flag }}" alt="{{ flag }}"></img>   
+
+                    <a href="{{ item.linkyoutube }}" target="_blank" rel="noreferrer noopener" aria-label="youtube"><img class="youtubeIcon" src="{{ item.youtubelogo }}" alt="SN&PT Player"></img></a> 
+                    
                 </div>               
 
             {%- endfor -%}
