--- a/styles/globalStyle.css
+++ b/styles/globalStyle.css
@@ -212,6 +212,10 @@ a {
   margin: 0rem;
   margin-top: -0.1rem;
   width: 50px;
+  max-width: 50px;
+  display: block;
+  width: auto;
+  height: auto;
   align-items: center;
   justify-content: center;
   content: url(/images/uploads/logo.png);
