--- a/partials/pti.njk
+++ b/partials/pti.njk
@@ -10,6 +10,7 @@
                     <img class="featuredImage" src="{{ item.featuredImage }}" alt="{{ featuredImage }}"></img>
                     <h2>{{ item.title }}</h2>
                     <img class="flag" src="{{ item.flag }}" alt="{{ flag }}"></img> 
+                    <a href="{{ item.linkyoutube }}" target="_blank" rel="noreferrer noopener" aria-label="youtube"><img class="youtubeIcon" src="{{ item.youtubelogo }}" alt="SN&PT Player"></img></a> 
                 </div>               
 
             {%- endfor -%}
