--- a/partials/head.njk
+++ b/partials/head.njk
@@ -4,8 +4,19 @@
     <title>{{ title }}</title>
     {% seo "" %}    
     <link rel="shortcut icon" type="image/png" href="/images/uploads/logo.png"/> 
-     
+
+    <!-- Netlify CMS -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CJN5BP9S2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6CJN5BP9S2');
+    </script>
     
     {% set css %}
     {% include "styles/globalStyle.css" %}
