--- a/partials/head.njk
+++ b/partials/head.njk
@@ -17,6 +17,9 @@
 
     gtag('config', 'G-6CJN5BP9S2');
     </script>
+
+    <!-- Turbo Links -->
+
     
     {% set css %}
     {% include "styles/globalStyle.css" %}
