--- a/partials/navbar.njk
+++ b/partials/navbar.njk
@@ -12,7 +12,7 @@
     <span class="bar"></span>
     </div>
 
-        <ul class="navMenu" id="navLinks">
+        <ul class="navMenu" id="navLinks" data-turbolinks="true">
 
             <li>
             <a href="/snpt/">Sn & Pt</a>
